--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,44 @@
-pydantic==2.6.3
+# ----------------------------
+# Core LLM dependencies
+# ----------------------------
+transformers==4.41.0
+accelerate==0.29.2
+sentencepiece==0.2.0
+huggingface_hub==0.23.0
+
+# ----------------------------
+# Torch (CPU-safe by default)
+# ----------------------------
+# This ensures the project runs on any machine.
+# GPU users can override manually if required.
+torch==2.2.0
+
+# ----------------------------
+# Agent Frameworks
+# ----------------------------
+langchain==0.1.16
+langchain-core==0.1.45
+langchain-community==0.0.32
+crewai==0.22.0
+
+# ----------------------------
+# Template Engine
+# ----------------------------
+jinja2==3.1.3
+
+# ----------------------------
+# Utilities
+# ----------------------------
 python-dotenv==1.0.1
-openai==1.14.2
-requests==2.31.0
+pyyaml==6.0.1
+tqdm==4.66.2
+
+# ----------------------------
+# Testing
+# ----------------------------
 pytest==8.1.1
+
+# ----------------------------
+# Optional (Schema Validation)
+# ----------------------------
+jsonschema==4.22.0
