Restore LangChain Groq agentic pipeline (no secrets)

--- a/.env
+++ b/.env
@@ -2,13 +2,16 @@
 # MODEL CONFIG
 # ============================
 
-# Use FLAN fallback chain (no BART)
-QUESTION_MODEL=google/flan-t5-large,google/flan-t5-base,google/flan-t5-small
-GENERATION_MODEL=google/flan-t5-base
+
+# Use ONLY small FLAN for stability & speed
+QUESTION_MODEL=mistralai/Mistral-7B-Instruct-v0.2-GPTQ
+GENERATION_MODEL=mistralai/Mistral-7B-Instruct-v0.2-GPTQ
+
 
 # ============================
 # FILE PATHS
 # ============================
+
 INPUT_PRODUCT_DATA=input/product_data.json
 
 TEMPLATE_FAQ=templates/faq_template.json
@@ -22,6 +25,7 @@ OUTPUT_COMPARISON=outputs/comparison_page.json
 # ============================
 # LLM PARAMETERS
 # ============================
+
 MAX_TOKENS=256
 TEMPERATURE=0.3
 TOP_P=0.9
@@ -30,9 +34,14 @@ MIN_QUESTIONS=15
 # ============================
 # LOGGING
 # ============================
+
 LOG_LEVEL=INFO
 
 # ============================
 # FUTURE EXTENSIONS
 # ============================
+
 USE_REMOTE_LLM=false
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_PROJECT=kasparro-ai-agent
+LANGCHAIN_VERBOSE=true
